# Bulls_and_cows

./: pyproject.toml
app/: .env  __init__.py  config.py  database.py  main.py
app/auth/: cooki.py  hasher.py  manager.py
app/logic/: algorithm.py  randoms.py
app/logic/validate/: validation.py
app/migration/: env.py
app/migration/versions/: 4149ef13ba83_create_db.py
app/models/: statistics.py  user.py
app/routers/: auth.py  game.py  singin.py
app/schemes/: user.py
