[tool.poetry]
name = "gamebullandcow"
version = "0.1.0"
description = ""
authors = ["Mike Sobolev <gemex18@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
fastapi = "^0.109.0"
pydantic = "^2.5.3"
python-dotenv = "^1.0.0"
uvicorn = "^0.25.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.2"}
asyncpg = "^0.29.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
